<resources>
    <string name="app_name">Product Photography</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="product_description">Product Description</string>
    <string name="label">label</string>
    <string name="width">Width</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="add_product">ADD Product</string>
    <string name="barcode">Barcode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionPlaceholder">Some product description to appear here. This is just a place holder</string>
    <string name="placeholderBarcode">9897832453453</string>
    <string name="placeholderLength">900.2</string>
    <string name="placeholderWidth">89.9</string>
    <string name="placeholderHeight">980.9</string>
    <string name="placeholderWeight">82.0</string>
    <string name="barcode_scan">Barcode Scan</string>
    <string name="length_hint">Length</string>
    <string name="width_hint">Width</string>
    <string name="weight_hint">Weight</string>
    <string name="add_btn_text">ADD PRODUCT</string>
    <string name="height_hint">Height</string>
    <string name="take_photo">Take Photo</string>
    <string name="product_details">Product Details</string>
    <string name="photo_capture_button">Photo Capture Button</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="export_csv">Export CSV</string>
    <string name="cancel"><font color="#000000">Cancel</font></string>
    <string name="yes"><font color="#000000">Yes</font></string>
    <string name="delete_msg"><font color="#ff0000">Are you sure you want to clear all contents?</font></string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
</resources>